# sphere_advcpp_autumn_2020

./: .gitignore  CMakeLists.txt  README.md
0.Beginning/: task.cpp
0.Interview/: README.md  task.cpp
1.Process/: CMakeLists.txt  descripter.cpp  descripter.h  descriptor.cpp  descriptor.h  main  main.cpp  process.cpp  process.h  test_runner.h
1.Process/hdr/: descripter.h
1.Process/include/: descripter.h  descriptor.h  prcerr.h  process.h
1.Process/lib/: descripter.cpp  descriptor.cpp  prcerr.cpp  process.cpp
1.Process/tests/: 1test.cpp  2test.cpp  3test.cpp  CMakeLists.txt  main.cpp
1.proc/: CMakeLists.txt  README.md
1.proc/include/: descriptor.h  prcerr.h
1.proc/lib/: CMakeLists.txt  descriptor.cpp
1.proc/tests/: CMakeLists.txt
2.LOG/: CMakeLists.txt
2.LOG/include/: baselogger.h  error.h  filelogger.h  globallogger.h  level.h  logerr.h  logger.h  stderrlogger.h  stdoutlogger.h
2.LOG/lib/: baselogger.cpp  filelogger.cpp  globallogger.cpp  logerr.cpp  logger.cpp  stderrlogger.cpp  stdoutlogger.cpp
2.LOG/tests/: CMakeLists.txt  test.cpp
2.log/: README.md
2.log/include/: baselogger.h  filelogger.h  level.h  logerr.h  stderrlogger.h  stdoutlogger.h
2.log/lib/: CMakeLists.txt  baselogger.cpp  filelogger.cpp  globallogger.cpp  logerr.cpp
3.TCP/: CMakeLists.txt
3.TCP/hdr/: connection.h  descripter.h  error.h  server.h
3.TCP/include/: BaseConnection.h  address.h  connection.h  descripter.h  descriptor.h  error.h  iConnectable.h  iConnection.h  nonblock_connection.h  server.h  socket.h  tcperr.h
3.TCP/lib/: CMakeLists.txt  address.cpp  connection.cpp  descripter.cpp  descriptor.cpp  error.cpp  nonblock_connection.cpp  server.cpp  socket.cpp  tcperr.cpp
3.TCP/src/: connection.cpp  descripter.cpp  error.cpp  server.cpp
3.TCP/tests/: CMakeLists.txt  testClient.cpp  testServer.cpp  test_runner.h
3.TCP/tests/lecture/: client.cpp  server.cpp
3.tcp/: README.md
3.tcp/include/: address.h  descriptor.h
3.tcp/lib/: address.cpp  descriptor.cpp  nonblock_connection.cpp  server.cpp
3.tcp/tests/: testServer.cpp
3.tcp/tests/lecture/: client.cpp  server.cpp
4.SharedMap/: CMakeLists.txt
4.SharedMap/include/: error.h  sem.h  semlock.h  shalloc.h  shallocator.h  shmap.h  shmemerr.h  shmmap.h  shsemaphore.h  shsemlock.h
4.SharedMap/lib/: CMakeLists.txt  error.cpp  sem.cpp  semlock.cpp  shallocator.cpp  sherr.cpp  shmemerr.cpp  shmmap.cpp  shsemaphore.cpp  shsemlock.cpp
4.SharedMap/tests/: CMakeLists.txt  shmemtest.cpp  test.cpp
4.SharedMap/tests/lecture/: shalloc.cpp  shunique.cpp
4.shmem/: README.md
4.shmem/include/: shalloc.h  shmap.h  shmemerr.h
4.shmem/lib/: CMakeLists.txt  semlock.cpp  shmmap.cpp
4.shmem/tests/: shmemtest.cpp
4.shmem/tests/lecture/: shalloc.cpp  shunique.cpp
5.Service/: CMakeLists.txt
5.Service/include/: BaseService.h  base_service.h  bufconnection.h  client_container.h  connection_container.h  connection_manager.h  epoll.h  iListener.h  iService.h  listener.h  neterr.h  option.h  service.h
5.Service/lib/: CMakeLists.txt  bufconnection.cpp  connection_manager.cpp  epoll.cpp  neterr.cpp  option.cpp  service.cpp
5.Service/tests/: CMakeLists.txt  calc_test.sh  calculator.cpp  client.cpp  echo.cpp  stress_test.sh  test.cpp
5.net/: README.md
5.net/include/: bufconnection.h  connection_container.h  epoll.h  neterr.h  option.h  service.h
5.net/lib/: CMakeLists.txt  epoll.cpp  service.cpp
5.net/tests/: echo.cpp
5.net/tests/lecture/: epoll.cpp
6.HTTP/include/: header.h  httpconnection.h  httpcontainers.h  httperr.h  httplistener.h  httpmanager.h  httpservice.h  httpworker.h  iTimed.h  message.h  request.h  request_parser.h  status_code.h  timeout.h  worker.h
6.HTTP/lib/: CMakeLists.txt  httpconnection.cpp  httpservice.cpp  httpworker.cpp  iTimed.cpp  message.cpp  request_parser.cpp  status_code.cpp  worker.cpp
6.HTTP/tests/: CMakeLists.txt  httpclient.cpp  httpserver.cpp  httptest.cpp  keep_alive.cpp  keep_alive_zombie.cpp  parsertest.cpp  server.cpp  stress.sh  test_client.sh  zombie.cpp
6.http/: CMakeLists.txt  README.md
6.http/include/: httpconnection.h  httperr.h  iTimed.h
6.http/lib/: CMakeLists.txt  httpworker.cpp  message.cpp
6.http/tests/: CMakeLists.txt  server.cpp  simple.cpp
7.Coroutines/include/: corconnection.h  corlistener.h  cormanager.h  coroutine.h  corservice.h  corworker.h
7.Coroutines/lib/: CMakeLists.txt  corconnection.cpp  coroutine.cpp  corservice.cpp  corworker.cpp
7.Coroutines/tests/: corserver.cpp
7.Coroutines/tests/lecture/: main.cpp  man.cpp
7.cor/: CMakeLists.txt  README.md
7.cor/include/: corerr.h  coroutine.h
7.cor/lib/: corservice.cpp
7.cor/tests/: CMakeLists.txt
7.cor/tests/lecture/: main.cpp  man.cpp
utils/: test_runner.h
